<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frags"
    android:orientation="vertical"
    android:layout_alignParentTop="false"
    android:layout_alignParentStart="false"
    android:gravity="center_vertical|fill_vertical"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:elevation="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/main_menu_title"
                    android:layout_weight="0.01"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:autoText="false"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textStyle="normal|bold"
                    android:lineSpacingExtra="0sp"
                    android:textSize="36sp"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_weight="0.1"
                    android:layout_height="wrap_content" />

                <Button
                    android:text="@string/start"
                    android:id="@+id/start_button"
                    android:layout_width="150dp"
                    android:layout_weight="0.1"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="25dp"
                    android:textSize="24sp" />

                <Button
                    android:text="@string/exit"
                    android:id="@+id/exit_button"
                    android:layout_weight="0.1"
                    android:layout_width="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="25dp"
                    android:textSize="24sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />

            </LinearLayout>

        </FrameLayout>
    </RelativeLayout>

</LinearLayout>